--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,3 +1,14 @@
 .projects {
+  margin: 0 auto;
   margin-top: 100px;
+  width: fit-content;
 }
+
+
+@media screen and (max-width: 1100px) {
+  .projects {
+    width: 100%;
+  }
+}
+
+
