--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Josefin Sans', sans-serif;
   background-color: #FFFDF4;
   line-height: 1.3;
