--- a/src/components/Projects/ProjectItemLeft.css
+++ b/src/components/Projects/ProjectItemLeft.css
@@ -1,5 +1,10 @@
+.project-container {
+  width: 1000px;
+  margin: 0 auto;
+}
+
 .project-item {
-  width: 865px;
+  width: 80%;
   height: fit-content;
   border-radius: 34px 34px 150px 34px;
   background-color: #E1F0E1;
@@ -9,12 +14,8 @@
 
 
 .project-info {
-  width: 35%;
+  width: 70%;
   padding-right: 30px;
-}
-
-.project {
-  display: flex;
 }
 
 /* IMAGE */
@@ -23,15 +24,16 @@
   background-position: center;
   background-size: cover;
   width: 95%;
-  padding-top: 60%;
+  height: 300px;
+  /* padding-top: 60%; */
   border-radius: 20px;
   position: absolute;
-  top: 0px;
-  right: -280px;
+  top: -76px;
+  right: -470px;
 }
 
-.project-img {
-  width: 65%;
+.image-container {
+  width: 500px;
   position: relative;
 }
 
@@ -40,8 +42,8 @@
 
 .links  {
   position: absolute;
-  top: 350px;
-  right: 0px;
+  top: 358px;
+  right: -211px;
 }
 
 .links p {
@@ -53,12 +55,17 @@
 /* RESPONSIVENESS */
 
 @media screen and (max-width: 1100px) {
+  .project-container {
+    width: 100%;
+  }
   .project-item {
     width: 100%;
   }
   .image {
     position: initial;
     width: 100%;
+    height: 0;
+    padding-top: 60%;
   }
   .project {
     display: initial;
@@ -67,11 +74,21 @@
     width: 100%;
     padding-right: 0;
   }
-  .project-img {
+  .image-container {
     width: 100%;
   }
   .links  {
     top: 30px;
     right: 22px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .project-item {
+    padding: 22px;
+  }
+  .links  {
+    top: 17px;
+    right: 16px;
   }
 }
