--- a/src/components/Projects/ProjectItemLeft.css
+++ b/src/components/Projects/ProjectItemLeft.css
@@ -15,7 +15,7 @@
 
 .project-info {
   width: 70%;
-  padding-right: 30px;
+  padding-right: 48px;
 }
 
 /* IMAGE */
@@ -43,12 +43,29 @@
 .links  {
   position: absolute;
   top: 358px;
-  right: -211px;
+  right: -209px;
 }
 
 .links p {
   margin-right: 10px;
   font-size: 28px;
+}
+
+/* TAGS */
+
+.tech-tags {
+  margin-top: 16px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tech-tag {
+  color: white;
+  background-color: #DF7861;
+  padding: 5px 15px;
+  border-radius: 20px;
+  font-weight: 300;
+  margin: 10px 10px 0 0;
 }
 
 
