--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,6 +1,13 @@
 .intro {
   width: 700px;
   margin: 0 auto;
+  margin-top: 200px;
+  margin-bottom: 200px;
+}
+
+.intro a {
+  color: #DF7861;
+  font-weight: 400;
 }
 
 @media screen and (max-width: 1000px) {
