--- a/src/components/Projects/ProjectItemLeft.css
+++ b/src/components/Projects/ProjectItemLeft.css
@@ -1,6 +1,6 @@
 .project-container {
   width: 1000px;
-  margin: 0 auto;
+  margin: 100px auto;
 }
 
 .project-item {
@@ -30,11 +30,13 @@
   position: absolute;
   top: -76px;
   right: -470px;
+  
 }
 
 .image-container {
   width: 500px;
   position: relative;
+  
 }
 
 
@@ -97,6 +99,9 @@
   .links  {
     top: 30px;
     right: 22px;
+  }
+  .project-text {
+    margin-top: 30px;
   }
 }
 
