--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,7 +1,7 @@
 .intro {
   width: 700px;
   margin: 0 auto;
-  margin-top: 200px;
+  margin-top: 150px;
   margin-bottom: 200px;
 }
 
@@ -13,5 +13,11 @@
 @media screen and (max-width: 1000px) {
   .intro {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .intro {
+    margin-top: 70px;
   }
 }
