added scroll to sections on nav links plus added footer section

--- a/src/components/Projects/ProjectItemLeft.css
+++ b/src/components/Projects/ProjectItemLeft.css
@@ -51,6 +51,11 @@
 .links p {
   margin-right: 10px;
   font-size: 28px;
+  transition: 0.2s ease-in;
+}
+
+.links p:hover {
+  color: black;
 }
 
 /* TAGS */
