added project data sent via props and fixed bg color for projects

--- a/src/components/Projects/ProjectItemLeft.css
+++ b/src/components/Projects/ProjectItemLeft.css
@@ -7,9 +7,16 @@
   width: 80%;
   height: fit-content;
   border-radius: 34px 34px 150px 34px;
-  background-color: #E1F0E1;
   padding: 30px;
   position: relative;
+}
+
+.bg-green {
+  background-color: #E1F0E1;
+}
+
+.bg-blue {
+  background-color: #D9EBED;
 }
 
 
