--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,32 @@
   width: 90%;
   margin: 0 auto;
 }
+
+.line {
+  width: 2px;
+  height: 250px;
+  background-color: #DF7861;
+  position: fixed;
+  right: 50px;
+  bottom: 0;
+}
+
+.e-mail {
+  color: #DF7861;
+  position: fixed;
+  right: -34px;
+  bottom: 348px;
+  transform: rotate(90deg);
+  font-size: 18px;
+}
+
+
+
+
+
+
+@media screen and (max-width: 1100px) {
+  .sidebar-email {
+    display: none;
+  }
+}
