added margin to project-text on smaller screens and bolder font on tech-tags

--- a/src/components/Projects/ProjectItem.css
+++ b/src/components/Projects/ProjectItem.css
@@ -74,7 +74,7 @@
   background-color: #DF7861;
   padding: 5px 15px;
   border-radius: 20px;
-  font-weight: 300;
+  font-weight: 400;
   margin: 10px 10px 0 0;
 }
 
@@ -108,6 +108,9 @@
   }
   .tech-tags {
     width: 80%;
+  }
+  .project-text {
+    margin-top: 20px;
   }
 }
 
