add max-width on intro and contact

--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,5 +1,5 @@
-#intro, #contact {
-  width: 700px;
+#intro {
+  max-width: 700px;
   margin: 0 auto;
   margin-top: 150px;
   margin-bottom: 200px;
@@ -10,14 +10,8 @@
 }
 
 .intro a {
-  color: #DF7861;
+  color: #df7861;
   font-weight: 400;
-}
-
-@media screen and (max-width: 1000px) {
-  #intro {
-    width: 100%;
-  }
 }
 
 @media screen and (max-width: 500px) {
