--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,6 +1,13 @@
+#contact {
+  max-width: 700px;
+  margin: 0 auto;
+  margin-top: 150px;
+  margin-bottom: 200px;
+}
+
 #contact a {
   transition: 0.2s ease-in;
-  color: #DF7861;
+  color: #df7861;
   font-weight: 400;
   text-decoration: none;
 }
