--- a/src/components/Projects/ProjectItem.css
+++ b/src/components/Projects/ProjectItem.css
@@ -1,15 +1,18 @@
 .project-container {
-  width: 1000px;
-  margin: 100px auto;
-  margin-bottom: 50px;
+  width: 100%;
+  margin: 50px auto;
 }
 
 .project-item {
-  width: 80%;
-  height: 360px;
+  width: 100%;
+  height: fit-content;
   border-radius: 34px 34px 150px 34px;
   padding: 30px;
   position: relative;
+}
+
+.project-text {
+  margin-top: 20px;
 }
 
 .bg-green {
@@ -21,25 +24,29 @@
 }
 
 .project-info {
-  width: 70%;
-  padding-right: 48px;
+  width: 100%;
+  padding-right: 0;
 }
 
 /* IMAGE */
 
 .image {
+  position: initial;
+  width: 100%;
+  height: 0;
+  padding-top: 63%;
   background-position: center;
   background-size: cover;
-  width: 95%;
-  height: 300px;
+  /* width: 95%; */
+  /* height: 300px; */
   border-radius: 20px;
-  position: absolute;
+  /* position: absolute; */
   top: -97px;
   right: -470px;
 }
 
 .image-container {
-  width: 500px;
+  width: 100%;
   position: relative;
 }
 
@@ -47,8 +54,8 @@
 
 .links {
   position: absolute;
-  top: 338px;
-  right: -209px;
+  top: 30px;
+  right: 22px;
 }
 
 .links p {
@@ -64,6 +71,7 @@
 /* TAGS */
 
 .tech-tags {
+  width: 80%;
   margin-top: 16px;
   display: flex;
   flex-wrap: wrap;
@@ -80,36 +88,9 @@
 
 /* RESPONSIVENESS */
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1500px) {
   .project-container {
-    width: 100%;
-  }
-  .project-item {
-    width: 100%;
-    height: fit-content;
-  }
-  .image {
-    position: initial;
-    width: 100%;
-    height: 0;
-    padding-top: 63%;
-  }
-  .project-info {
-    width: 100%;
-    padding-right: 0;
-  }
-  .image-container {
-    width: 100%;
-  }
-  .links {
-    top: 30px;
-    right: 22px;
-  }
-  .tech-tags {
-    width: 80%;
-  }
-  .project-text {
-    margin-top: 20px;
+    /* width: 80%; */
   }
 }
 
