--- a/src/components/UI/Button.css
+++ b/src/components/UI/Button.css
@@ -5,6 +5,7 @@
   background: #fffdf4;
   box-shadow: 1px 1px 0 0 black, 2px 2px 0 0 black, 3px 3px 0 0 black;
   margin-top: 36px;
+  font-weight: 500;
 }
 
 .button-pill:hover {
