--- a/src/components/Projects/Filter.css
+++ b/src/components/Projects/Filter.css
@@ -3,25 +3,50 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 .filter-button {
   color: white;
   background: black;
-  font-size: 20px !important;
+  font-size: 20px;
   font-weight: 500;
   cursor: pointer;
   border: 2px solid black;
   border-radius: 40px;
   padding: 10px 20px 8px 20px;
+  z-index: 200;
+  width: 241px;
 }
 
 .filter-dropdown {
   width: 300px;
-  height: 300px;
-  background-color: red;
+  height: fit-content;
+  background-color: #fffdf4;
+  border: 2px solid black;
+  border-radius: 25px;
   position: absolute;
-  z-index: -1;
-  /* top: 0px;
-  left: 0px; */
+  z-index: 100;
+  width: 241px;
+  top: 0px;
+  left: 50% !important;
+  right: auto !important;
+  text-align: center !important;
+  transform: translate(-50%, 0) !important;
+}
+
+.filter-dropdown ul {
+  list-style: none;
+  text-align: center;
+  margin: 64px auto 30px auto;
+}
+
+.filter-option {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+
+.filter-option:hover {
+  color: #df7861;
 }
