filter-button for small screens

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Limelight&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Limelight&display=swap");
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Josefin Sans', sans-serif;
-  background-color: #FFFDF4;
+  font-family: "Josefin Sans", sans-serif;
+  background-color: #fffdf4;
   line-height: 1.3;
 }
 
@@ -12,9 +12,8 @@ html {
   scroll-behavior: smooth;
 }
 
-
 h1 {
-  font-family: 'Limelight', cursive;
+  font-family: "Limelight", cursive;
   font-size: 64px;
   font-weight: normal;
 }
@@ -23,7 +22,10 @@ h2 {
   font-size: 42px;
 }
 
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
   margin: 0;
 }
 
@@ -43,7 +45,7 @@ li span {
 }
 
 .text-orange {
-  color: #DF7861;
+  color: #df7861;
 }
 
 .text-sm {
@@ -78,3 +80,8 @@ a {
   text-decoration: none;
 }
 
+@media screen and (max-width: 800px) {
+  .header {
+    text-align: center;
+  }
+}
