--- a/src/components/Projects/Filter.css
+++ b/src/components/Projects/Filter.css
@@ -33,6 +33,7 @@
   right: auto !important;
   text-align: center !important;
   transform: translate(-50%, 0) !important;
+  transition: all 2s ease-in;
 }
 
 .filter-dropdown ul {
