new filterbutton with underline for active page and close-sign

--- a/src/components/Projects/Filter.css
+++ b/src/components/Projects/Filter.css
@@ -85,6 +85,10 @@
   border-bottom: 3px solid black;
 }
 
-.underline {
+.underline-tab {
   border-bottom: 3px solid black;
+}
+
+.underline-filter {
+  border-bottom: 2px solid black;
 }
