--- a/src/components/Projects/Filter.css
+++ b/src/components/Projects/Filter.css
@@ -17,6 +17,7 @@
   padding: 10px 20px 8px 20px;
   z-index: 200;
   width: 280px;
+  margin-bottom: 24px;
 }
 
 .filter-dropdown {
@@ -68,6 +69,7 @@
   justify-content: center;
   list-style: none;
   margin: 0;
+  margin-bottom: 36px;
 }
 
 .tab {
