--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@ p {
   margin: 0;
 }
 
+.header {
+  text-align: center;
+}
+
 ul {
   margin: 0;
   margin-right: 70px;
@@ -50,7 +54,7 @@ li span {
 }
 
 .text-sm {
-  font-size: 20px;
+  font-size: 22px;
 }
 
 .text-md {
