--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #FFFDF4;
+  background-color: var(--bg);
   padding: 10px 5%;
 }
 
@@ -12,7 +12,7 @@
 }
 
 .navbar-link {
-  color: black;
+  color: var(--black);
   margin-left: 30px;
   font-size: 24px !important;
   font-weight: 700;
@@ -23,5 +23,9 @@
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: black;
+  color: var(--black);
+}
+
+.navbar-light .navbar-nav .nav-link.active {
+  color: var(--black);
 }
