--- a/src/components/Projects/ProjectItem.css
+++ b/src/components/Projects/ProjectItem.css
@@ -1,6 +1,6 @@
 .project-container {
   width: 100%;
-  /* margin: 30px auto; */
+  margin: 50px auto;
 }
 
 .project-item {
@@ -15,15 +15,15 @@
   margin-top: 20px;
 }
 
-.bg-green {
-  /* background-color: #e1f0e1; */
-  background-color: none;
-}
+/* .bg-green { */
+/* background-color: #e1f0e1; */
+/* background-color: none; */
+/* } */
 
-.bg-blue {
-  /* background-color: #d9ebed; */
-  background-color: none;
-}
+/* .bg-blue { */
+/* background-color: #d9ebed; */
+/* background-color: none; */
+/* } */
 
 .project-info {
   width: 100%;
@@ -64,7 +64,7 @@
 }
 
 .links p:hover {
-  color: black;
+  color: var(--black);
 } */
 
 .link {
@@ -72,7 +72,7 @@
 }
 
 .link:hover {
-  color: black;
+  color: var(--black);
 }
 
 /* TAGS */
@@ -86,7 +86,7 @@
 
 .tech-tag {
   color: white;
-  background-color: #df7861;
+  background-color: var(--orange);
   padding: 7px 18px 4px 18px;
   border-radius: 20px;
   font-weight: 400;
