--- a/src/components/UI/Button.css
+++ b/src/components/UI/Button.css
@@ -1,16 +1,19 @@
 .button-pill {
-  border: 2px solid black;
+  border: 2px solid var(--black);
   border-radius: 40px;
-  padding: 8px 20px 5px 20px;
-  background: #fffdf4;
-  box-shadow: 1px 1px 0 0 black, 2px 2px 0 0 black, 3px 3px 0 0 black;
+  padding: 8px 28px 5px 28px;
+  /* background: var(--bg); */
+  background: #fffef9;
+  box-shadow: 1px 1px 0 0 var(--black), 2px 2px 0 0 var(--black),
+    3px 3px 0 0 var(--black);
   margin-top: 36px;
   font-weight: 500;
+  color: var(--black);
 }
 
 .button-pill:hover {
   cursor: pointer;
-  box-shadow: 1px 1px 0 0 black, 2px 2px 0 0 black;
+  box-shadow: 1px 1px 0 0 var(--black), 2px 2px 0 0 var(--black);
   transform: translate(1px, 1px);
 }
 
