--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Limelight&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&display=swap");
 
+:root {
+  --black: rgb(48, 44, 41);
+  --orange: #df7861;
+  --bg: #fffdf4;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: "Josefin Sans", sans-serif;
-  background-color: #fffdf4;
+  background-color: var(--bg);
   line-height: 1.3;
+  color: var(--black);
 }
 
 html {
@@ -50,7 +57,7 @@ li span {
 }
 
 .text-orange {
-  color: #df7861;
+  color: var(--orange);
 }
 
 .text-sm {
