add text to contentData and add logo

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -29,3 +29,7 @@
 .navbar-light .navbar-nav .nav-link.active {
   color: var(--black);
 }
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: var(--orange);
+}
