--- a/src/components/Projects/ProjectItem.css
+++ b/src/components/Projects/ProjectItem.css
@@ -1,5 +1,5 @@
 .project-container {
-  width: 100%;
+  width: 85%;
   margin: 50px auto 100px auto;
 }
 
@@ -72,5 +72,11 @@
   .links {
     top: 17px;
     right: 16px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .project-container {
+    width: 100%;
   }
 }
