--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ li span {
   vertical-align: middle;
 }
 
-a {
+a:hover {
   text-decoration: none;
 }
 
@@ -102,4 +102,8 @@ a {
   font-weight: 300;
   text-align: center;
   width: 80%;
+}
+
+.tab-link:focus-visible {
+  outline: 4px solid var(--black);
 }
