fix scroll to project and contact anchor

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -7,6 +7,12 @@
 
 #projects-anchor {
   position: relative;
+  top: -270px;
+  left: 0;
+}
+
+.scroll-anchor {
+  position: relative;
   top: -200px;
   left: 0;
 }
