--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,9 +1,12 @@
 #contact {
   max-width: 800px;
-  margin: 0 auto;
-  padding-top: 280px;
-  margin-top: -320px;
-  margin-bottom: 200px;
+  margin: 80px auto 200px auto;
+}
+
+#contact-anchor {
+  position: relative;
+  top: -270px;
+  left: 0;
 }
 
 /* Alternative to off-setting with negative margin for scroll to #contact */
