--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -102,3 +102,21 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+/* NAVBAR TOGGLER */
+
+/* .navbar-light .navbar-toggler {
+  color: var(--black);
+  border-color: var(--black);
+} */
+
+/* LANGUAGE SWITCH */
+.lang-switch {
+  margin-left: 36px;
+}
+
+@media screen and (max-width: 991px) {
+  .lang-switch {
+    margin-left: 22px;
+  }
+}
