--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,19 +1,14 @@
 #projects {
   margin: 0 auto;
-  margin-top: 80px;
+  margin-top: -130px;
+  padding-top: 130px;
   margin-bottom: 200px;
   width: 60%;
 }
 
-#projects-anchor {
-  position: relative;
-  top: -150px;
-  left: 0;
-}
-
 .scroll-anchor {
   position: relative;
-  top: -200px;
+  top: -130px;
   left: 0;
 }
 
@@ -30,9 +25,8 @@
 }
 
 @media screen and (max-width: 974px) {
-  #projects-anchor {
-    position: relative;
-    top: -270px;
-    left: 0;
+  #projects {
+    margin-top: -300px;
+    padding-top: 300px;
   }
 }
