--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,59 +1,78 @@
-.navbar {
-  background-color: var(--bg);
-  padding: 10px 5%;
-}
-
-.navbar-brand {
-  font-size: 54px !important;
+.navbar-logo {
   cursor: pointer;
+  width: 80px;
 }
 
-.navbar-brand:hover {
+.navbar-logo:hover {
   opacity: 0.8;
 }
 
-.navbar-link {
+header {
+  border-bottom: 2px solid var(--black);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  padding: 10px 3%;
+  background-color: var(--bg);
+  position: sticky;
+  top: 0;
+  z-index: 500;
+}
+
+header nav {
+  display: flex;
+  align-items: center;
+}
+
+header .nav-btn {
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  display: none;
+  font-size: 1.8rem;
+}
+
+nav a {
+  margin: 0 1.5rem;
   color: var(--black);
-  margin-left: 30px;
-  font-size: 24px !important;
+  text-decoration: none;
   font-weight: 700;
+  font-size: 18px;
 }
 
-.navbar-collapse {
-  text-align: center;
-}
-
-.navbar-light .navbar-nav .nav-link {
-  color: var(--black);
-}
-
-.navbar-light .navbar-nav .nav-link.active {
-  color: var(--black);
-}
-
-.navbar-light .navbar-nav .nav-link:hover {
+nav a:hover {
   color: var(--orange);
-}
-
-.navbar-link:focus-visible {
-  outline: 4px solid var(--orange);
 }
 
 /* CHECKBOX */
 
 /* The switch - the box around the slider */
-.switch {
+.lang-switch-container {
+  margin-left: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.lang-switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 42px;
+  height: 24px;
 }
 
 /* Hide default HTML checkbox */
-.switch input {
+.lang-switch input {
   opacity: 0;
   width: 0;
   height: 0;
+}
+
+.lang-switch-container p {
+  font-size: 16px;
 }
 
 /* The slider */
@@ -72,8 +91,8 @@
 .slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
+  height: 16px;
+  width: 16px;
   left: 4px;
   bottom: 4px;
   background-color: white;
@@ -85,14 +104,10 @@ input:checked + .slider {
   background-color: #8e75f3;
 }
 
-input:focus + .slider {
-  /* box-shadow: 0 0 1px #2196f3; */
-}
-
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(18px);
+  -ms-transform: translateX(18px);
+  transform: translateX(18px);
 }
 
 /* Rounded sliders */
@@ -104,20 +119,49 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-/* NAVBAR TOGGLER */
+@media screen and (max-width: 1000px) {
 
-/* .navbar-light .navbar-toggler {
-  color: var(--black);
-  border-color: var(--black);
-} */
 
-/* LANGUAGE SWITCH */
-.lang-switch {
-  margin-left: 36px;
-}
+  header .nav-btn {
+    display: block;
+  }
 
-@media screen and (max-width: 991px) {
-  .lang-switch {
-    margin-left: 22px;
+  header nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    transform: translateY(-100vh);
+    -webkit-transform: translateY(-100vh);
+    -ms-transform: translateY(-100vh);
+    background-color: var(--bg);
+    z-index: 1000;
+  }
+
+  nav a {
+    font-size: 26px;
+  }
+
+  header .responsive-nav {
+    transform: none;
+  }
+
+  nav .nav-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 3%;
+  }
+
+  .lang-switch-container {
+    margin-right: 1.5rem;
   }
 }
