--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -4,6 +4,10 @@
   padding-top: 80px;
 }
 
+#contact p {
+  overflow-wrap: break-word;
+}
+
 .contact-link {
   transition: 0.2s ease-in;
   color: var(--orange);
