--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
 }
 
 .navbar-logo:hover {
-  opacity: 0.8;
+  opacity: 0.7;
 }
 
 header {
@@ -44,6 +44,14 @@ nav a {
 }
 
 nav a:hover {
+  color: var(--orange);
+}
+
+.nav-btn, .nav-close-btn {
+  color: var(--black);
+}
+
+.nav-btn:hover, .nav-close-btn:hover {
   color: var(--orange);
 }
 
