--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,14 +8,12 @@
 }
 
 header {
-  border-bottom: 2px solid var(--black);
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 10px 3%;
-  background-color: var(--bg);
-  position: sticky;
+  /* position: sticky; */
   top: 0;
   z-index: 500;
 }
@@ -41,6 +39,7 @@ nav a {
   text-decoration: none;
   font-weight: 700;
   font-size: 18px;
+  text-transform: uppercase;
 }
 
 nav a:hover {
