--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Limelight&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Inter:wght@400;500;600&display=swap');
 
 :root {
   --black: rgb(48, 44, 41);
@@ -10,7 +9,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Josefin Sans", sans-serif;
+  font-family: 'Inter', sans-serif;
   background-color: var(--bg);
   line-height: 1.3;
   color: var(--black);
@@ -21,7 +20,7 @@ html {
 }
 
 h1 {
-  font-family: "Limelight", cursive;
+  font-family: 'Dela Gothic One', sans-serif;
   font-size: 64px;
   font-weight: normal;
 }
