--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,48 +1,97 @@
-#intro-container {
+.intro-container {
+  padding: 25% 0 80px 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.intro-top {
+  margin-bottom: 80px;
+  line-height: 1.4em;
+  font-size: 2rem;
+}
+
+.intro-bottom {
+  display: flex;
+  justify-content: end;
+  gap: 120px;
+  font-size: 1.5rem;
+}
+
+.intro-email a {
+  text-decoration: none;
+  font-weight: 500;
+  color: var(--black);
+}
+
+.logo {
+  width: 128px;
+  margin-bottom: 24px;
+}
+
+@media screen and (max-width: 750px) {
+  .intro-top {
+      margin-bottom: 60px;
+      line-height: 1.4em;
+      font-size: 1.4rem;
+  }
+
+  .intro-bottom {
+    gap: 56px;
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .intro-bottom {
+    flex-direction: column;
+    gap: 32px;
+    font-size: 1rem;
+  }
+}
+
+
+/* #intro-container {
   max-width: 800px;
   margin: 0 auto;
   margin-top: 150px;
   margin-bottom: 200px;
-}
+} */
 
-#intro {
+/* #intro {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
   margin-bottom: 40px;
-}
+} */
 
 /* .tech-stack {
   display: flex;
 } */
 
-.contact-button-screen {
+/* .contact-button-screen {
   display: none !important;
-}
+} */
 
-.intro-left {
+/* .intro-left {
   width: 60%;
   height: 100%;
-}
+} */
 
-#portrait {
+/* #portrait {
   width: 35%;
   object-fit: cover;
   object-position: center;
   border-radius: 8px;
-}
+} */
 
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
   #intro {
     margin-top: 70px;
   }
-  /* .tech-stack {
-    display: initial;
-  } */
-}
+} */
 
-@media screen and (max-width: 750px) {
+/* @media screen and (max-width: 750px) {
   #intro-container {
     margin-bottom: 126px;
   }
@@ -62,4 +111,4 @@
   .contact-button-screen {
     display: inline-block !important;
   }
-}
+} */
