--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,6 +7,11 @@
   opacity: 0.7;
 }
 
+#name {
+  font-family: 'Dela Gothic One', sans-serif;
+  cursor: pointer;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -37,9 +42,10 @@ nav a {
   margin: 0 1.5rem;
   color: var(--black);
   text-decoration: none;
-  font-weight: 700;
-  font-size: 18px;
+  font-weight: 600;
+  font-size: 16px;
   text-transform: uppercase;
+  letter-spacing: 0.05em;
 }
 
 nav a:hover {
@@ -170,5 +176,11 @@ input:checked + .slider:before {
 
   .lang-switch-container {
     margin-right: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .navbar-logo {
+    width: 60px;
   }
 }
