Update project item on landing page

--- a/src/components/Projects/ProjectItem.css
+++ b/src/components/Projects/ProjectItem.css
@@ -1,20 +1,15 @@
 .project-container {
-  width: 85%;
-  margin: 50px auto 130px auto;
-}
-
-.project-item {
-  width: 100%;
-  border-radius: 34px 34px 150px 34px;
-}
-
-.project-text {
-  margin-top: 20px;
+  margin-bottom: 140px;
 }
 
 .project-info {
   width: 100%;
-  padding-right: 0;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.project-info a {
+  margin: 20px 0;
 }
 
 /* IMAGE */
@@ -25,56 +20,48 @@
   padding-top: 63%;
   background-position: center;
   background-size: cover;
-  border-radius: 8px;
+  border-radius: 16px;
 }
 
 .image-container {
   width: 100%;
-  position: relative;
-}
-
-/* LINKS  */
-
-.link {
-  transition: 0.2s ease-in;
-}
-
-.link:hover {
-  color: var(--black);
 }
 
 /* TAGS */
 
 .tech-tags {
-  width: 80%;
-  margin-top: 16px;
   display: flex;
   flex-wrap: wrap;
+  gap: 8px;
 }
 
 .tech-tag {
-  color: white;
-  background-color: var(--orange);
-  padding: 7px 18px 4px 18px;
-  border-radius: 20px;
-  font-weight: 400;
-  margin: 10px 10px 0 0;
+  color: var(--black);
+  padding: 24px 40px;
+  border-radius: 50px;
+  border: 1px solid var(--black);
+  font-weight: 500;
+  font-size: 1.25rem;
 }
 
 /* RESPONSIVENESS */
 
-@media screen and (max-width: 450px) {
-  .project-item {
-    padding: 22px;
-  }
-  .links {
-    top: 17px;
-    right: 16px;
-  }
-}
-
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 750px) {
   .project-container {
-    width: 100%;
+    margin-bottom: 88px;
+  }
+
+  .project-info a {
+    font-size: 1.5rem;
+  }
+
+  .project-info svg {
+    width: 44px;
+  }
+
+  .tech-tag {
+    padding: 16px 32px;
+    border-radius: 50px;
+    font-size: 1rem;
   }
 }
