--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -3,7 +3,7 @@
   margin-top: -130px;
   padding-top: 130px;
   margin-bottom: 200px;
-  width: 60%;
+  /* width: 60%; */
 }
 
 .scroll-anchor {
@@ -14,7 +14,7 @@
 
 @media screen and (max-width: 1500px) {
   #projects {
-    width: 80%;
+    /* width: 80%; */
   }
 }
 
