--- a/src/components/UI/LinkButton.css
+++ b/src/components/UI/LinkButton.css
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   white-space: nowrap;
+  /* transition: transform .7s ease-in-out; */
 }
 
 .arrow {
@@ -14,7 +15,10 @@
 
 .link-button:hover {
   cursor: pointer;
-  color: var(--orange);
+  color: var(--black);
+  /* transform: rotateX(90deg); */
+  /* transform-style: preserve-3d; */
+  /* transform-origin: bottom; */
 }
 
 .link-button:active {
