--- a/src/index.css
+++ b/src/index.css
@@ -125,6 +125,7 @@ a:hover {
 @media screen and (max-width: 550px) {
   .main-container {
     padding-top: 60px;
+    width: 90%;
   }
   h1 {
     font-size: 42px;
@@ -136,6 +137,7 @@ a:hover {
   }
   .main-container {
     padding-top: 60px;
+    width: 90%;
   }
   h1 {
     font-size: 32px;
