Fix margins and porject section layour

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,7 +17,7 @@ header {
   align-items: center;
   justify-content: space-between;
   height: 100px;
-  padding: 10px 3%;
+  padding: 10px 4%;
   /* position: sticky; */
   top: 0;
   z-index: 500;
@@ -46,6 +46,10 @@ nav a {
   font-size: 16px;
   text-transform: uppercase;
   letter-spacing: 0.05em;
+}
+
+nav a:nth-last-child(2) {
+  margin-right: 0;
 }
 
 nav a:hover {
