--- a/src/components/Projects/ProjectItem.css
+++ b/src/components/Projects/ProjectItem.css
@@ -1,5 +1,11 @@
 .project-container {
-  margin: 0 auto 140px auto;
+  margin-bottom: 140px;
+  max-width: 1200px;
+}
+
+.project-container:nth-child(even) {
+  margin-left: auto;
+  margin-right: 0;
 }
 
 .main-container .project-container:last-child {
@@ -49,6 +55,23 @@
 }
 
 /* RESPONSIVENESS */
+
+
+@media screen and (max-width: 1400px) {
+  .project-container {
+    max-width: 1000px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .project-container:nth-child(even) {
+    margin-left: 0;
+    margin-right: auto;
+  }
+  .project-container {
+    max-width: 1200px;
+  }
+}
 
 @media screen and (max-width: 1000px) {
   .project-info a {
