--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -4,6 +4,10 @@
   z-index: 1000;
 }
 
+#scroll-contact {
+  padding-bottom: 80px;
+}
+
 #scroll-contact a {
   text-decoration: none;
   font-weight: 500;
