--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,18 +1,34 @@
-.footer {
-  text-align: center;
+#footer-wrapper {
+  border-radius: 0;
+  position: static;
+}
+
+
+.footer.main-container {
+  display: flex;
+  justify-content: space-between;
+  /* margin-bottom: 10px; */
+  padding: 24px 0;
 }
 
 .social-links {
   display: flex;
-  justify-content: center;
 }
 
-.social-links p {
-  font-size: 46px;
-  margin: 0 10px;
+.social-links a {
+  text-decoration: none;
+  font-weight: 500;
+  color: var(--black);
+  font-size: 1.2rem;
+  margin-right: 48px;
   transition: 0.2s ease-in;
 }
 
-.social-links p:hover {
+.social-links a:hover {
+  text-decoration: underline;
   color: var(--black);
+}
+
+.copyright {
+  font-size: 1.2rem;
 }
